Game Manager, Coin, Menu
- game manager ahora maneja el guardar, cargar y deletear los datos del juego. Tambien maneja la info del juego, es decir, si pickeas una coin, el mismo game manager te suma 10 a currency.
- los enemigos ahora dropean Coins
- cuando el player pickea la coin, la destruye y le dice al game manager che sumate 10 puntitos

- hice un main menu
- en el main menu tambien estan estos datos y persisten del juego interno al externo

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\_Scripts\UI_Manager.cs" />
+    <Compile Include="Assets\_Scripts\GameManager.cs" />
     <Compile Include="Assets\_Scripts\PatternRecognition.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventHandler.cs" />
     <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\BulletFactory.cs" />
@@ -111,6 +112,7 @@
     <Compile Include="Assets\_Scripts\Player\Attacks\GroundAttack.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
+    <Compile Include="Assets\_Scripts\Coin.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\Pool.cs" />
     <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\Enemy.cs" />
