--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,22 +59,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\_Scripts\PatternRecognition.cs" />
-    <Compile Include="Assets\_Scripts\Builder - Prototype\Spawner.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventHandler.cs" />
-    <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\BulletFactory.cs" />
+    <Compile Include="Assets\_Scripts\Pool.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
-    <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\Debugger.cs" />
     <Compile Include="Assets\_Scripts\Player\Controller.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMPro_InstructionOverlay.cs" />
     <Compile Include="Assets\_Scripts\Enemies\Zombie.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
     <Compile Include="Assets\_Scripts\Enemies\Fairy.cs" />
+    <Compile Include="Assets\_Scripts\Enemies\Factory - Builder\IEnemy.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
     <Compile Include="Assets\_Scripts\Player\Controllers\ButtonController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
-    <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\IEnemy.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
     <Compile Include="Assets\_Scripts\Player\Attacks\ThunderAttack.cs" />
     <Compile Include="Assets\_Scripts\Player\Attacks\Swipe.cs" />
@@ -82,7 +80,6 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SimpleScript.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark04.cs" />
     <Compile Include="Assets\_Scripts\Player\PowerUps\Shield.cs" />
-    <Compile Include="Assets\_Scripts\Builder - Prototype\EnemyBuilder.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ObjectSpin.cs" />
     <Compile Include="Assets\_Scripts\SaveWithPlayerPrefs.cs" />
@@ -98,8 +95,10 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TeleType.cs" />
     <Compile Include="Assets\_Scripts\Player\Player.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
+    <Compile Include="Assets\_Scripts\Enemies\Factory - Builder\Enemy.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_UiFrameRateCounter.cs" />
     <Compile Include="Assets\_Scripts\Player\IDamageable.cs" />
+    <Compile Include="Assets\_Scripts\Enemies\Factory - Builder\Builder\EnemyBuilder.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
     <Compile Include="Assets\_Scripts\Managers\GameManager.cs" />
@@ -108,12 +107,14 @@
     <Compile Include="Assets\_Scripts\Player\PlayerHealth.cs" />
     <Compile Include="Assets\_Scripts\Managers\AudioManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
-    <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\Bullet.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
     <Compile Include="Assets\_Scripts\Player\Controllers\JoystickController.cs" />
+    <Compile Include="Assets\_Scripts\Enemies\Factory - Builder\EnemyFactory.cs" />
+    <Compile Include="Assets\_Scripts\Bullet\Bullet.cs" />
     <Compile Include="Assets\_Scripts\Audio\SfxSlider.cs" />
     <Compile Include="Assets\_Scripts\Player\EnemyDetector.cs" />
     <Compile Include="Assets\_Scripts\Player\PowerUps\PowerUp.cs" />
+    <Compile Include="Assets\_Scripts\Bullet\BulletFactory.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
     <Compile Include="Assets\_Scripts\Player\Attacks\IceAttack.cs" />
@@ -122,12 +123,10 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
-    <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\Pool.cs" />
-    <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\Enemy.cs" />
     <Compile Include="Assets\_Scripts\Player\PlayerView.cs" />
+    <Compile Include="Assets\_Scripts\Enemies\Factory - Builder\Builder\Spawner.cs" />
     <Compile Include="Assets\_Scripts\Player\Attacks\IAttack.cs" />
     <Compile Include="Assets\_Scripts\Managers\EventManager.cs" />
-    <Compile Include="Assets\_Scripts\Object Pool - Factory - Scripts\EnemyFactory.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
   </ItemGroup>
   <ItemGroup>
