--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\_Scripts\Player\Controllers\ButtonController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
     <Compile Include="Assets\_Scripts\Ads\InitializeAds.cs" />
+    <Compile Include="Assets\_Scripts\Tutorial\TutorialManager.cs" />
     <Compile Include="Assets\_Scripts\Localization\Localization.cs" />
     <Compile Include="Assets\_Scripts\Ads\IntestitialAds.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="Assets\_Scripts\Player\PowerUps\IPowerUp.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
     <Compile Include="Assets\_Scripts\Ads\AdsManager.cs" />
+    <Compile Include="Assets\_Scripts\Tutorial\TriggerDestroy.cs" />
     <Compile Include="Assets\_Scripts\Player\PowerUps\LifePU.cs" />
     <Compile Include="Assets\_Scripts\Managers\UI_Manager.cs" />
     <Compile Include="Assets\_Scripts\Enemies\TestEnemy.cs" />
